# MD-EVOSEP-system-suitability-control

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  config.example.toml
.github/workflows/: ci.yml  release.yml
assets/: MD_QC_Report.skyr
installer/: config.template.toml  mdqc.iss
src/: crash.rs  error.rs  failed_files.rs  main.rs  notifications.rs  types.rs
src/baseline/: mod.rs
src/classifier/: mod.rs
src/cli/: baseline.rs  classify.rs  config.rs  doctor.rs  failed.rs  mod.rs  run.rs  status.rs
src/config/: mod.rs  paths.rs
src/extractor/: mod.rs  skyline.rs
src/gui/: mod.rs
src/metrics/: mod.rs
src/service/: mod.rs  windows_service.rs
src/spool/: mod.rs
src/tray/: mod.rs  windows.rs
src/uploader/: mod.rs
src/watcher/: finalizer.rs  mod.rs
test-harness/: README.md  copy_as_qc.py  monitor_agent.py  run_tests.bat  simulate_acquisition.py
