[package]
name = "mdqc-agent"
version = "0.5.3"
edition = "2021"
authors = ["Mass Dynamics <engineering@massdynamics.com>"]
description = "MD Local QC Agent - System suitability monitoring for mass spectrometry"
license = "Apache-2.0"
repository = "https://github.com/MassDynamics/mdqc-agent"
readme = "README.md"
keywords = ["mass-spectrometry", "qc", "proteomics", "skyline"]
categories = ["science", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client (native-tls needed for Windows cert store / PKCS12 support)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "native-tls", "stream"] }

# Cryptography and hashing
sha2 = "0.10"
hex = "0.4"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Path handling
directories = "5.0"
dirs = "5.0"
glob = "0.3"
which = "6.0"
hostname = "0.4"

# Regex for classification
regex = "1.10"

# Random number generation
rand = "0.8"

# CSV parsing (for Skyline reports)
csv = "1.3"

# Async channels
async-channel = "2.1"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# File time manipulation (for retry functionality)
filetime = "0.2"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winreg = "0.52"
windows-sys = { version = "0.52", features = [
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_Foundation"
] }

# System tray (Windows)
tray-icon = "0.19"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# Toast notifications (Windows)
winrt-notification = "0.5"

# GUI config editor
eframe = "0.29"
rfd = "0.15"  # File dialogs

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "mdqc"
path = "src/main.rs"
